kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: testapp
  name: testapp
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: testapp
  template:
    metadata:
      labels:
        app: testapp
    spec:
      containers:
      - image: ahmadhassan83/myapprest
        imagePullPolicy: Always
