kube/mysql-endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: mysql-svc
subsets:
- addresses:
  - ip: 192.168.1.98
  ports:
  - port: 3306
    protocol: TCP
